<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kain</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_button">Test</string>
    <string name="title">Saan tayo kakain?</string>
    <string name="button1">kahit saan!</string>
    <string name="button2">Button2</string>
    <string name="button3">Button 3</string>
    <string name="button4">Button 4</string>
    <string name="title_activity_generate_map">Location Map</string>
    <string name="range">Distance radius</string>
    <string name="latitude_longitude">%1$.8f,%2$.8f</string>
    <string name="app_id">542669075827696</string>

</resources>
