<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context=".MainActivity" 
    android:id="@+id/tableLayout" >
        
	    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="20dip"
	        android:orientation="horizontal" >
	 
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_weight="1"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	 
	        <TextView
	            android:id="@+id/textView2"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:layout_weight="2" 
	            android:gravity="center"
	            android:text="@string/title" />
	        
	        <TextView
	            android:id="@+id/textView3"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:layout_weight="1" />
	    </TableRow>
	
	            
	    <TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="10dip"
	        android:orientation="horizontal" >
	 
	        <TextView
	            android:id="@+id/textView4"
	            android:layout_weight="1"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	 
			<Button 
			    android:id="@+id/button1"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_weight="2"
		        android:text="@string/button1" 
		        android:background="@drawable/mybutton"/>
			        
	        <TextView
	            android:id="@+id/textView6"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:layout_weight="1" />
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/tableRow3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="10dip"
	        android:orientation="horizontal" >
	 
	        <TextView
	            android:id="@+id/textView7"
	            android:layout_weight="1"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	 
			<EditText 
			    android:id="@+id/editText1"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_weight="2"
		        android:hint="@string/range"
		        android:gravity="center"
		        android:inputType="number"
		        android:background="@drawable/mybutton"/>
			        
	        <TextView
	            android:id="@+id/textView9"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:layout_weight="1" />
	    </TableRow>
    
		<TableRow
	        android:id="@+id/tableRow4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="10dip"
	        android:orientation="horizontal" >
	 
	        <TextView
	            android:id="@+id/textView10"
	            android:layout_weight="1"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	 
			<TextView 
			    android:id="@+id/locationText"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center"
		        android:text="@string/button3" />
			        
	        <TextView
	            android:id="@+id/textView12"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:layout_weight="1" />
	    </TableRow>

		<TableRow
	        android:id="@+id/tableRow5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:padding="10dip"
	        android:orientation="horizontal" >
	 
	        <TextView
	            android:id="@+id/textView13"
	            android:layout_weight="1"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	 
			<TextView 
			    android:id="@+id/locationUpdateText"
		        android:layout_height="wrap_content"
		        android:layout_width="wrap_content"
		        android:layout_weight="2"
		        android:gravity="center"
		        android:text="@string/button4" />
			        
	        <TextView
	            android:id="@+id/textView15"
	            android:textAppearance="?android:attr/textAppearanceLarge"
	            android:layout_weight="1" />
	    </TableRow>
			    
</TableLayout>